style.css
/* ... */
.card {
  width: 20rem;
  position: relative;
  perspective: 150rem;
}

.card-image {
  width: 25rem;
  border-radius: 0.3rem 0.3rem 0 0;
}

.front-side {
  text-align: center;
  background-color: var(--primary-color);
  border-radius: 0.3rem;
  position: relative;
  z-index: 10;
  opacity: 0.9;
  transition: opacity 0.4s, transform 0.4s, box-shadow 0.4s;
}

.change > .front-side {
  transform: translateZ(-5rem) translateX(3rem);
  box-shadow: 0 2rem 4rem #777;
  opacity: 0.5;
  z-index: 0;
}

.back-side {
  position: absolute;
  top: 0;
  background-color: var(--primary-color);
  width: 100%;
  height: 100%;
  border-radius: 0.3rem;
  box-shadow: 0 2rem 4rem #777;
  flex-direction: column;
  transform: translateZ(-5rem) translateX(3rem);
  opacity: 0.5;
  transition: opacity 0.4s, transform 0.4s, box-shadow 0.4s;
}

.change > .back-side {
  transform: translateZ(0) translateX(0);
  box-shadow: 0 0.5rem 2rem #aaa;
  opacity: 0.9;
}

.card-info {
  font-size: 1.5rem;
  font-weight: 300;
  color: var(--white-color);
  margin-bottom: 3rem;
  text-transform: uppercase;
}

.navigation-button {
  position: absolute;
  top: 0.5rem;
  left: 0.5rem;
  padding: 0.5rem;
  background-color: rgba(255, 255, 255, 0.8);
  color: var(--light-grey-color);
  border-radius: 50%;
  border: none;
  font-size: 1.5rem;
  font-weight: 600;
  text-transform: uppercase;
  letter-spacing: 0.2rem;
  cursor: pointer;
}
/* fill in */

/* .about-me-paragraph {
  font-size: 2rem;
  font-weight: 200;
  text-align: left;
  padding-left: 40px;
  padding-top: 40px;
  color: var(--white-color);
  margin: inherit;
}  */

#carousels {
  height: 70vh;
  list-style-type: none;
}

.carousel {
  position: absolute;
  height: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  left: 0px;
  top: 0px;
  width: 100%;
  text-align: center;
  opacity: 0;
  z-index: 1;
  padding: 50px 0 100px 0;
  box-sizing: border-box;
  color: #fff;
  background-size: cover;
  -webkit-transition: opacity 1s;
  -moz-transition: opacity 1s;
  -o-transition: opacity 1s;
  transition: opacity 1s;
}

.showing {
  opacity: 1;
  z-index: 2;
}

#carousel_content {
  align-items: center;
  margin-bottom: 90px;
  /* margin: 0px 80px; */
  overflow: hidden;
  box-sizing: border-box;
}

.carousel:nth-of-type(1) {
  background-attachment: fixed;
  background-size: cover;
}

.carousel:nth-of-type(2) {
  background-attachment: fixed;
  background-size: cover;
}

.carousel:nth-of-type(3) {
  background-attachment: fixed;
  background-size: cover;
}

.controls {
  background: #3333339e;
  border-radius: 50px;
  border: none;
  padding: 20px 0px;
  font-size: 20px;
  color: #eee;
  cursor: pointer;
  border: 2px solid var(--white-color);
  margin: 10px 10px 10px 10px;
  width: 70px;
  height: 70px;
}

.controls:hover,
.controls:focus {
  background: #eee;
  color: #333;
}

.interactive {
  position: relative;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100%;
}

.buttons {
  display: flex;
  width: 100%;
  justify-content: space-between;
  padding: 0px;
  /* box-sizing: border-box;
  grid-template-columns: 80px 1fr 80px 1fr 80px;
  justify-items: center; */
  z-index: 10;
}

.controls#pause {
  grid-column-start: 3;
}

.controls#previous {
  grid-column-start: 0;
}

.controls#next {
  grid-column-start: 6;
}

.carousel_nav {
  display: flex;
  width: 100%;
  justify-content: center;
  left: 0px;
  top: 0px;
  z-index: 10;
  /* padding: 8px; */
  box-sizing: border-box;
}

.carousel_indicator {
  border: 0;
  border-radius: 50%;
  width: 15px;
  height: 15px;
  background: rgba(0, 0, 0, 0.3);
  margin: 0 12px;
}

.carousel_indicator.current-showing {
  background: rgba(0, 0, 0, 0.75);
}
/* End of About Me */

/* Questions */
#question-main-heading {
  font-size: 6rem;
  text-align: center;
  /* margin-top: 4rem;
  margin-bottom: 5rem; */
  color: var(--white-color);
  text-shadow: 0.3rem 0.5rem var(--light-grey-color);
  letter-spacing: 10px;
  font-weight: 500;
}

.questions {
  padding: 5rem 0;
  position: relative;
  flex-direction: column;
  min-height: 800px;
}

.questions-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  flex-grow: 1;
}

.question-bg {
  background-color: rgba(255, 255, 255, 0.2);
  border: 1px solid var(--primary-color);
  padding: 3rem;
  margin: 2rem;
  width: 85%;
  box-shadow: 0 2rem 5rem rgba(51, 51, 51, 0.4);
  transform: skewX(20deg);
}

.question {
  transform: skewX(-20deg);
  display: flex;
}

.question-image {
  width: 9rem;
  height: 9rem;
  border-radius: 50%;
  object-fit: cover;
  margin-right: 5rem;
}

.question-text {
  letter-spacing: 0.1rem;
}

.questions-heading {
  font-size: 2rem;
  text-transform: lowercase;
  color: var(--light-grey-color);
  margin-bottom: 1rem;
  margin-top: 1rem;
}

.question-paragraph {
  font-size: 12px;
  color: var(--primary-color);
}

.question-paragraph::first-letter {
  margin-left: 1rem;
}
/* End of Questions */

/* Prerequisites */
#prereqs-heading {
  font-size: 6rem;
  text-align: center;
  margin-top: 4rem;
  color: var(--white-color);
  text-shadow: 0.3rem 0.5rem var(--light-grey-color);
  letter-spacing: 10px;
  font-weight: 500;
}

#links {
  display: flex;
  flex-flow: row;
  text-align: center;
  /* margin: 0 auto; */
  /* justify-content: center;
  align-items: center; */
  padding: 30px;
}

.link {
  transition: all 0.8s ease-in-out;
}

.link.in-view {
  opacity: 1;
}

#links a {
  margin: 0 auto;
  padding: 0px 30px;
}

#links img {
  margin: 0 auto;
  height: 120px;
  border-radius: 50%;
}

#links img:hover {
  animation: shake 1s;
  animation-iteration-count: infinite;
}
/* ... */

